--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-dom": "^16.9.0",
     "react-particles-js": "^2.7.0",
     "react-router-dom": "^5.1.0",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.3.0",
     "react-tagcloud": "^1.4.0"
   },
   "scripts": {
